squashing bugs

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,11 @@ html {
   width: 100%;
 }
 
+html, body, #root {
+  height: 100%;
+}
+
+
 body {
   width: 100%;
   min-height: var(--vh);
